YAML files/4-Deploy App/three-tier-application-k8s/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cldinf-app-api
  namespace: cldinf-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cldinf-api
  template:
    metadata:
      labels:
        app: cldinf-api
    spec:
      containers:
      - name: cldinf-api
        image: registry.gitlab.ost.ch:45023/ins-stud/cldinf/hs2021/g7/cloud-infrastructure-kubernetes/api
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred
