YAML files/4-Deploy App/three-tier-application-k8s/db_deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cldinf-app-db
  namespace: cldinf-app
spec:
  replicas: 1
  serviceName: cldinf-db
  selector:
    matchLabels:
      app: cldinf-db
      tier: database
  template:
    metadata:
      labels:
        app: cldinf-db
        tier: database
    spec:
      containers:
      - image: postgres:latest
        name: cldinf-db
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdatabase
          mountPath: /mnt/data
      nodeSelector:
        kubernetes.io/hostname: worker-1
      volumes:
      - name: pgdatabase
        persistentVolumeClaim:
          claimName: pvc-cldinf-app
