YAML files/4-Deploy App/three-tier-application-k8s/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cldinf-api-service
  namespace: cldinf-app
spec:
  ports:
  - port: 8000
  selector:
    app: cldinf-api
