YAML files/4-Deploy App/three-tier-application-k8s/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cldinf-db-service
  namespace: cldinf-app
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: cldinf-db
    tier: database
