YAML files/4-Deploy App/three-tier-application-k8s/web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cldinf-web-service
  namespace: cldinf-app
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: cldinf-web
