YAML files/4-Deploy App/three-tier-application-k8s/web_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: cldinf-app
spec:
  ingressClassName: nginx
  rules:
  - host: 10-18-9-7.sslip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cldinf-web-service
            port:
              number: 8080
